--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
         "axios": "^1.7.4",
         "chart.js": "^4.5.1",
         "concurrently": "^9.0.1",
+        "filepond": "^4.32.10",
+        "filepond-plugin-file-validate-size": "^2.2.8",
+        "filepond-plugin-file-validate-type": "^1.2.9",
         "laravel-vite-plugin": "^2.0",
         "tailwindcss": "^4.0.7",
         "vite": "^7.0.4"
