--- a/package.json
+++ b/package.json
@@ -8,6 +8,19 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.11",
+        "@tiptap/core": "^3.14.0",
+        "@tiptap/extension-blockquote": "^3.14.0",
+        "@tiptap/extension-image": "^3.14.0",
+        "@tiptap/extension-link": "^3.14.0",
+        "@tiptap/extension-placeholder": "^3.14.0",
+        "@tiptap/extension-table": "^3.14.0",
+        "@tiptap/extension-table-cell": "^3.14.0",
+        "@tiptap/extension-table-header": "^3.14.0",
+        "@tiptap/extension-table-row": "^3.14.0",
+        "@tiptap/extension-text-align": "^3.14.0",
+        "@tiptap/extension-youtube": "^3.14.0",
+        "@tiptap/pm": "^3.14.0",
+        "@tiptap/starter-kit": "^3.14.0",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "chart.js": "^4.5.1",
