--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "spatie/livewire-filepond": "^1.5"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.16",
         "fakerphp/faker": "^1.23",
         "laravel/boost": "^1.8",
         "laravel/pail": "^1.2.2",
