--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^4.1",
+        "pestphp/pest-plugin-browser": "^4.1",
         "pestphp/pest-plugin-laravel": "^4.0",
         "spatie/laravel-login-link": "^1.6"
     },
@@ -46,7 +47,10 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files": [
+            "tests/Browser/Helpers.php"
+        ]
     },
     "scripts": {
         "setup": [
