--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,6 +38,12 @@ jobs:
           extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick
           coverage: pcov
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
+
       - name: Cache Composer dependencies
         uses: actions/cache@v4
         with:
@@ -48,6 +54,12 @@ jobs:
 
       - name: Install PHP dependencies
         run: composer install --prefer-dist --no-progress --no-interaction --no-ansi
+
+      - name: Install Node dependencies
+        run: npm ci
+
+      - name: Build assets
+        run: npm run build
 
       - name: Create .env file
         run: |
@@ -138,6 +150,9 @@ jobs:
 
       - name: Build assets
         run: npm run build
+
+      - name: Ensure Playwright is up to date
+        run: npm install playwright@latest
 
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps chromium
