--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -151,11 +151,10 @@ jobs:
       - name: Build assets
         run: npm run build
 
-      - name: Ensure Playwright is up to date
-        run: npm install playwright@latest
-
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps chromium
+      - name: Update Playwright and install browsers
+        run: |
+          npm install playwright@latest
+          npx playwright install --with-deps chromium
         env:
           PLAYWRIGHT_BROWSERS_PATH: 0
 
