--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -145,18 +145,26 @@ jobs:
       - name: Install PHP dependencies
         run: composer install --prefer-dist --no-progress --no-interaction --no-ansi
 
-      - name: Install Node dependencies
-        run: npm ci
+      - name: Install Node dependencies (except Playwright)
+        run: |
+          npm ci --ignore-scripts
+          # Instalar Playwright latest después para evitar conflictos de versión
+          npm install playwright@latest --save-dev --no-save
 
       - name: Build assets
         run: npm run build
 
-      - name: Update Playwright and install browsers
-        run: |
-          npm install playwright@latest
-          npx playwright install --with-deps chromium
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps chromium
         env:
           PLAYWRIGHT_BROWSERS_PATH: 0
+
+      - name: Verify Playwright installation
+        run: |
+          echo "Playwright version:"
+          npx playwright --version
+          echo "Playwright location:"
+          npm list playwright
 
       - name: Create .env file
         run: |
